--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = { version = "4.5.26", features = ["derive"] }
 colored = "2.2.0"
+json = "0.12.4"
 promkit = "0.6.2"
 rand = "0.8.5"
 strum = "0.26.3"
